--- a/Exemple/habillage/css/style.css
+++ b/Exemple/habillage/css/style.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 h1 {
     color: red;
+    text-decoration: underline;
+    text-transform: uppercase;
+    text-align: center;
+    font-family: 'Permanent Marker', cursive;
 }
 
 li {
